--- a/index.html
+++ b/index.html
@@ -6,44 +6,28 @@
 <title>鹿港景點計時地圖</title>
 
 <style>
-  html, body { height: 100%; margin: 0; padding: 0; }
-  #app { height: 100%; display: flex; flex-direction: column; }
+html, body { height:100%; margin:0; }
+#app { height:100%; display:flex; flex-direction:column; }
 
-  /* 上方 UI */
-  #uiBar{
-    flex: 0 0 auto;
-    padding: 10px 12px;
-    background: rgba(255,255,255,0.98);
-    box-shadow: 0 2px 10px rgba(0,0,0,0.12);
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 10px;
-    z-index: 10;
-  }
-  #uiBar .title { font-weight: 700; font-size: 16px; }
+#uiBar{
+  padding:10px 12px;
+  background:#fff;
+  box-shadow:0 2px 10px rgba(0,0,0,.25);
+  display:flex;
+  align-items:center;
+  gap:12px;
+  z-index:10;
+}
+#map{ flex:1; }
 
-  #timerBox {
-    font-weight: 700;
-    font-size: 16px;
-    padding: 6px 10px;
-    border-radius: 10px;
-    background: #f5f5f5;
-  }
-  #statusBox { font-size: 14px; color: #333; }
-
-  #uiBar button{
-    font-size: 14px;
-    padding: 8px 12px;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-  }
-  .start-btn { background:#2e7d32; color:#fff; }
-  .cancel-btn { background:#e0e0e0; }
-  .reset-btn { background:#1565c0; color:#fff; }
-
-  #map { flex: 1 1 auto; width: 100%; }
+button{
+  padding:6px 12px;
+  border-radius:8px;
+  border:none;
+  cursor:pointer;
+}
+.start{ background:#2e7d32; color:#fff; }
+.skip{ background:#ccc; }
 </style>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9yd5GeV-J0SHVtpkeHvtFfSryaavAKIE"></script>
@@ -52,90 +36,46 @@
 <body>
 <div id="app">
   <div id="uiBar">
-    <div class="title">鹿港定位計時</div>
-    <button class="start-btn" id="btnStart" onclick="startGeolocation()">啟用定位</button>
-    <button class="cancel-btn" id="btnSkip" onclick="skipGeolocation()">不啟用</button>
-    <button class="reset-btn" onclick="recenterToLukang()">回到鹿港</button>
-
-    <div id="timerBox">已花費時間：<span id="timer">00:00:00</span></div>
-    <div id="statusBox">狀態：尚未開始</div>
+    <button class="start" onclick="startGeolocation()">啟用定位</button>
+    <button class="skip" onclick="skipGeolocation()">不啟用</button>
+    <div>時間：<span id="timer">00:00:00</span></div>
+    <div id="status">狀態：等待中</div>
   </div>
-
   <div id="map"></div>
 </div>
 
 <script>
-/* =====================
-   鹿港設定
-   ===================== */
-const LUKANG_CENTER = { lat: 24.056348, lng: 120.432589 };
-const LUKANG_RADIUS_M = 4200;
+/* ===== 基本設定 ===== */
+const LUKANG_CENTER = { lat:24.056348, lng:120.432589 };
+const LUKANG_RADIUS = 4200; // 公尺
 
-/* =====================
-   景點資料（12 個）
-   ===================== */
 const locations = [
-  { name: "玻璃館", lat: 24.068667, lng: 120.395437 },
-  { name: "鹿港老街", lat: 24.056348, lng: 120.432589 },
-  { name: "鹿港龍山寺", lat: 24.0504, lng: 120.4349 },
-  { name: "鹿港天后宮", lat: 24.059338, lng: 120.43138 },
-  { name: "玻璃媽祖廟", lat: 24.069118, lng: 120.394715 },
-  { name: "桂花巷藝術村", lat: 24.055848, lng: 120.431928 },
-  { name: "臺灣玻璃館", lat: 24.06897, lng: 120.394912 },
-  { name: "鹿港民俗文物館", lat: 24.0542, lng: 120.436306 },
-  { name: "九曲巷", lat: 24.0535, lng: 120.435 },
-  { name: "十宜樓", lat: 24.0535, lng: 120.4353 },
-  { name: "鹿港意樓", lat: 24.0529, lng: 120.4353 },
-  { name: "摸乳巷", lat: 24.051817, lng: 120.432231 }
+  { name:"鹿港老街", lat:24.056348, lng:120.432589 },
+  { name:"鹿港龍山寺", lat:24.0504, lng:120.4349 },
+  { name:"鹿港天后宮", lat:24.059338, lng:120.43138 },
+  { name:"玻璃媽祖廟", lat:24.069118, lng:120.394715 },
+  { name:"桂花巷藝術村", lat:24.055848, lng:120.431928 },
+  { name:"臺灣玻璃館", lat:24.06897, lng:120.394912 },
+  { name:"鹿港民俗文物館", lat:24.0542, lng:120.436306 },
+  { name:"九曲巷", lat:24.0535, lng:120.435 },
+  { name:"十宜樓", lat:24.0535, lng:120.4353 },
+  { name:"鹿港意樓", lat:24.0529, lng:120.4353 },
+  { name:"摸乳巷", lat:24.051817, lng:120.432231 }
 ];
 
-let map;
-let userMarker = null;
-let watchId = null;
+let map, userMarker, watchId;
+let startTime, timerId;
+let entered = false;
 
-let startTime = null;
-let timerInterval = null;
-let geofenceEntered = false;
-let remaining = new Set(locations.map(l => l.name));
-
-/* =====================
-   工具
-   ===================== */
-function setStatus(msg){
-  document.getElementById("statusBox").textContent = "狀態：" + msg;
-}
-
-function formatTime(ms){
-  let s = Math.floor(ms / 1000);
-  const h = String(Math.floor(s / 3600)).padStart(2,"0");
-  s %= 3600;
-  const m = String(Math.floor(s / 60)).padStart(2,"0");
-  const ss = String(s % 60).padStart(2,"0");
-  return `${h}:${m}:${ss}`;
-}
-
-function getDistance(lat1,lng1,lat2,lng2){
-  const R = 6371000;
-  const dLat = (lat2-lat1)*Math.PI/180;
-  const dLng = (lng2-lng1)*Math.PI/180;
-  const a =
-    Math.sin(dLat/2)**2 +
-    Math.cos(lat1*Math.PI/180)*Math.cos(lat2*Math.PI/180)*
-    Math.sin(dLng/2)**2;
-  return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-}
-
-/* =====================
-   圓形 path（不靠 geometry）
-   ===================== */
-function makeCirclePath(center, radius, points=240){
+/* ===== 工具：算圓 ===== */
+function makeCircle(center, radius, points=240){
   const R = 6378137;
   const lat0 = center.lat * Math.PI/180;
   const lng0 = center.lng * Math.PI/180;
   const d = radius / R;
-  const path = [];
+  const res = [];
 
-  for(let i=0;i<points;i++){
+  for(let i=0;i<=points;i++){
     const b = 2*Math.PI*i/points;
     const lat = Math.asin(
       Math.sin(lat0)*Math.cos(d) +
@@ -145,143 +85,114 @@ function makeCirclePath(center, radius, points=240){
       Math.sin(b)*Math.sin(d)*Math.cos(lat0),
       Math.cos(d)-Math.sin(lat0)*Math.sin(lat)
     );
-    path.push({ lat: lat*180/Math.PI, lng: lng*180/Math.PI });
+    res.push({ lat:lat*180/Math.PI, lng:lng*180/Math.PI });
   }
-  return path;
+  return res;
 }
 
-/* =====================
-   ⭐ 聚光遮罩（重點修改）
-   ===================== */
-function buildSpotlight(){
+/* ===== 建立硬切遮罩 ===== */
+function buildMask(){
   const outer = [
-    { lat: 27.8, lng: 117.5 },
-    { lat: 27.8, lng: 124.8 },
-    { lat: 20.0, lng: 124.8 },
-    { lat: 20.0, lng: 117.5 }
+    {lat:30,lng:110},{lat:30,lng:130},
+    {lat:18,lng:130},{lat:18,lng:110}
   ];
-
-  const holeFar   = makeCirclePath(LUKANG_CENTER, 6000).reverse();
-  const holeMid   = makeCirclePath(LUKANG_CENTER, 4800).reverse();
-  const holeInner = makeCirclePath(LUKANG_CENTER, 4200).reverse();
+  const hole = makeCircle(LUKANG_CENTER, LUKANG_RADIUS).reverse();
 
   new google.maps.Polygon({
     map,
-    paths:[outer, holeFar],
+    paths:[outer, hole],
     fillColor:"#000",
-    fillOpacity:0.75,
-    strokeOpacity:0,
-    clickable:false
-  });
-
-  new google.maps.Polygon({
-    map,
-    paths:[outer, holeMid],
-    fillColor:"#000",
-    fillOpacity:0.45,
-    strokeOpacity:0,
-    clickable:false
-  });
-
-  new google.maps.Polygon({
-    map,
-    paths:[outer, holeInner],
-    fillColor:"#000",
-    fillOpacity:0.10,
+    fillOpacity:0.75,   // 🔥 外面非常暗
     strokeOpacity:0,
     clickable:false
   });
 }
 
-/* =====================
-   地圖初始化
-   ===================== */
+/* ===== 地圖初始化 ===== */
 function initMap(){
   map = new google.maps.Map(document.getElementById("map"),{
     center:LUKANG_CENTER,
     zoom:12
   });
 
-  locations.forEach(loc=>{
-    loc.marker = new google.maps.Marker({
-      position:{lat:loc.lat,lng:loc.lng},
+  locations.forEach(l=>{
+    l.marker = new google.maps.Marker({
       map,
-      title:loc.name
+      position:{lat:l.lat,lng:l.lng},
+      title:l.name
     });
   });
 
-  buildSpotlight();
-  setStatus("進入鹿港範圍後開始計時");
+  buildMask();
+  setStatus("進入鹿港後開始計時");
 }
 
-/* =====================
-   操作
-   ===================== */
-function recenterToLukang(){
-  map.setCenter(LUKANG_CENTER);
-  map.setZoom(12);
-}
-
+/* ===== 定位 ===== */
 function startGeolocation(){
-  document.getElementById("btnStart").disabled = true;
-  document.getElementById("btnSkip").disabled = true;
-  watchId = navigator.geolocation.watchPosition(onLocation);
+  navigator.geolocation.watchPosition(onPos);
 }
-
 function skipGeolocation(){
-  setStatus("未啟用定位（僅瀏覽）");
+  setStatus("僅瀏覽模式");
 }
 
-function onLocation(pos){
-  const p = { lat:pos.coords.latitude, lng:pos.coords.longitude };
-
+function onPos(pos){
+  const p = {lat:pos.coords.latitude, lng:pos.coords.longitude};
   if(!userMarker){
     userMarker = new google.maps.Marker({
-      position:p,
       map,
+      position:p,
       icon:{
         path:google.maps.SymbolPath.CIRCLE,
-        scale:8,
-        fillColor:"#ff0000",
+        scale:7,
+        fillColor:"#f00",
         fillOpacity:1,
         strokeWeight:2
       }
     });
-  } else {
-    userMarker.setPosition(p);
-  }
+  }else userMarker.setPosition(p);
 
-  const d = getDistance(p.lat,p.lng,LUKANG_CENTER.lat,LUKANG_CENTER.lng);
-
-  if(!geofenceEntered && d<=LUKANG_RADIUS_M){
-    geofenceEntered = true;
-    startTime = Date.now();
-    timerInterval = setInterval(()=>{
-      document.getElementById("timer").textContent =
-        formatTime(Date.now()-startTime);
-    },1000);
-
-    setStatus("已進入鹿港（開始計時）");
+  const d = distance(p, LUKANG_CENTER);
+  if(!entered && d<=LUKANG_RADIUS){
+    entered=true;
+    startTimer();
     map.setCenter(p);
     map.setZoom(16);
-  }
-
-  if(geofenceEntered){
-    locations.forEach(loc=>{
-      if(!remaining.has(loc.name)) return;
-      if(getDistance(p.lat,p.lng,loc.lat,loc.lng)<=5){
-        loc.marker.setMap(null);
-        remaining.delete(loc.name);
-        if(remaining.size===0){
-          clearInterval(timerInterval);
-          setStatus("🎉 全部景點完成！");
-        }
-      }
-    });
+    setStatus("已進入鹿港（開始計時）");
   }
 }
 
-window.onload = initMap;
+/* ===== 計時 ===== */
+function startTimer(){
+  startTime=Date.now();
+  timerId=setInterval(()=>{
+    document.getElementById("timer").textContent=format(Date.now()-startTime);
+  },1000);
+}
+
+function format(ms){
+  let s=Math.floor(ms/1000);
+  const h=String(Math.floor(s/3600)).padStart(2,"0");
+  s%=3600;
+  const m=String(Math.floor(s/60)).padStart(2,"0");
+  const ss=String(s%60).padStart(2,"0");
+  return `${h}:${m}:${ss}`;
+}
+
+/* ===== 其他 ===== */
+function setStatus(t){
+  document.getElementById("status").textContent="狀態："+t;
+}
+function distance(a,b){
+  const R=6371000;
+  const dLat=(b.lat-a.lat)*Math.PI/180;
+  const dLng=(b.lng-a.lng)*Math.PI/180;
+  const x=Math.sin(dLat/2)**2+
+    Math.cos(a.lat*Math.PI/180)*Math.cos(b.lat*Math.PI/180)*
+    Math.sin(dLng/2)**2;
+  return R*2*Math.atan2(Math.sqrt(x),Math.sqrt(1-x));
+}
+
+window.onload=initMap;
 </script>
 </body>
 </html>
