--- a/index.html
+++ b/index.html
@@ -1,192 +1,144 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>鹿港景點計時地圖</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>鹿港行程地圖</title>
 
 <style>
 html, body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
 }
 
-/* App 主容器 */
+/* 整體 */
 #app {
   width: 100%;
-  height: 100svh;              /* ⭐ 手機穩定高度 */
-  display: flex;
-  flex-direction: column;
 }
 
-/* 上方 UI */
+/* UI 區 */
 #uiBar {
-  flex: 0 0 auto;
-  padding: 10px 12px;
-  background: #fff;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.25);
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  align-items: center;
+  padding: 10px;
+  background: #ffffff;
+  box-shadow: 0 2px 8px rgba(0,0,0,.25);
+  font-size: 14px;
+  position: sticky;
+  top: 0;
   z-index: 10;
 }
 
 #uiBar button {
   padding: 8px 12px;
-  border-radius: 10px;
+  border-radius: 8px;
   border: none;
-  font-size: 14px;
-  cursor: pointer;
+  margin-right: 6px;
+  margin-bottom: 6px;
 }
 
 .start-btn { background:#2e7d32; color:#fff; }
 .cancel-btn { background:#e0e0e0; }
-.reset-btn { background:#1565c0; color:#fff; }
+.full-btn { background:#1976d2; color:#fff; }
 
 #timerBox {
-  font-weight: 700;
-  font-size: 15px;
-  margin-left: auto;
-}
-
-#statusBox {
-  width: 100%;
-  font-size: 14px;
+  font-weight: bold;
 }
 
 /* 地圖 */
 #map {
-  flex: 1 1 auto;
   width: 100%;
-  min-height: 60vh;            /* ⭐ 防止手機被壓扁 */
+  height: 420px;          /* 預設高度（Sites 手機安全） */
+  min-height: 420px;
 }
 </style>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9yd5GeV-J0SHVtpkeHvtFfSryaavAKIE"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9yd5GeV-J0SHVtpkeHvtFfSryaavAKIE&libraries=geometry"></script>
 </head>
 
 <body>
 <div id="app">
+
   <div id="uiBar">
     <button class="start-btn" onclick="startGeolocation()">啟用定位</button>
     <button class="cancel-btn" onclick="skipGeolocation()">不啟用</button>
-    <button class="reset-btn" onclick="recenterToLukang()">回到鹿港</button>
+    <button class="full-btn" onclick="toggleFullscreen()">全螢幕地圖</button>
 
-    <div id="timerBox">時間：<span id="timer">00:00:00</span></div>
-    <div id="statusBox">狀態：尚未開始</div>
+    <div id="timerBox">
+      時間：<span id="timer">00:00:00</span>
+    </div>
+    <div id="status">狀態：尚未開始</div>
   </div>
 
   <div id="map"></div>
+
 </div>
 
 <script>
-/* ================= 基本設定 ================= */
-const LUKANG_CENTER = { lat: 24.056348, lng: 120.432589 };
-const LUKANG_RADIUS = 4200;   // 公尺
+const LUKANG_CENTER = { lat:24.056348, lng:120.432589 };
+const LUKANG_RADIUS = 4200;
 
-const locations = [
-  { name:"玻璃館", lat:24.068667, lng:120.395437 },
-  { name:"鹿港老街", lat:24.056348, lng:120.432589 },
-  { name:"鹿港龍山寺", lat:24.0504, lng:120.4349 },
-  { name:"鹿港天后宮", lat:24.059338, lng:120.43138 },
-  { name:"玻璃媽祖廟", lat:24.069118, lng:120.394715 },
-  { name:"桂花巷藝術村", lat:24.055848, lng:120.431928 },
-  { name:"臺灣玻璃館", lat:24.06897, lng:120.394912 },
-  { name:"鹿港民俗文物館", lat:24.0542, lng:120.436306 },
-  { name:"九曲巷", lat:24.0535, lng:120.435 },
-  { name:"十宜樓", lat:24.0535, lng:120.4353 },
-  { name:"鹿港意樓", lat:24.0529, lng:120.4353 },
-  { name:"摸乳巷", lat:24.051817, lng:120.432231 }
-];
-
-let map, maskPolygon, userMarker;
+let map, mask, userMarker;
 let entered = false;
-let timerStart = null;
-let timerId = null;
-let remaining = new Set(locations.map(l=>l.name));
+let timerStart, timerId;
+let isFullscreen = false;
+let originalHeight = 420;
 
-/* ================= 工具 ================= */
-function setStatus(t){ document.getElementById("statusBox").textContent = "狀態：" + t; }
-
-function haversine(a,b,c,d){
-  const R=6371000;
-  const dLat=(c-a)*Math.PI/180;
-  const dLng=(d-b)*Math.PI/180;
-  const x=Math.sin(dLat/2)**2+
-    Math.cos(a*Math.PI/180)*Math.cos(c*Math.PI/180)*Math.sin(dLng/2)**2;
-  return R*2*Math.atan2(Math.sqrt(x),Math.sqrt(1-x));
+/* ===== UI ===== */
+function setStatus(t){
+  document.getElementById("status").textContent = "狀態：" + t;
 }
 
-function circlePath(center, r, pts=180){
-  const R=6378137;
-  const lat0=center.lat*Math.PI/180;
-  const lng0=center.lng*Math.PI/180;
-  const d=r/R;
-  const res=[];
-  for(let i=0;i<pts;i++){
-    const b=2*Math.PI*i/pts;
-    const lat=Math.asin(Math.sin(lat0)*Math.cos(d)+Math.cos(lat0)*Math.sin(d)*Math.cos(b));
-    const lng=lng0+Math.atan2(Math.sin(b)*Math.sin(d)*Math.cos(lat0),Math.cos(d)-Math.sin(lat0)*Math.sin(lat));
-    res.push({lat:lat*180/Math.PI,lng:lng*180/Math.PI});
+/* ===== 地圖工具 ===== */
+function circlePath(c,r,p=180){
+  const R=6378137, lat=c.lat*Math.PI/180, lng=c.lng*Math.PI/180, d=r/R;
+  const a=[];
+  for(let i=0;i<p;i++){
+    const b=2*Math.PI*i/p;
+    const la=Math.asin(Math.sin(lat)*Math.cos(d)+Math.cos(lat)*Math.sin(d)*Math.cos(b));
+    const ln=lng+Math.atan2(Math.sin(b)*Math.sin(d)*Math.cos(lat),Math.cos(d)-Math.sin(lat)*Math.sin(la));
+    a.push({lat:la*180/Math.PI,lng:ln*180/Math.PI});
   }
-  return res;
+  return a;
 }
 
-/* ================= 地圖 ================= */
+/* ===== 地圖初始化 ===== */
 function initMap(){
   map=new google.maps.Map(document.getElementById("map"),{
     center:LUKANG_CENTER,
     zoom:12
   });
 
-  locations.forEach(l=>{
-    l.marker=new google.maps.Marker({ position:l, map, title:l.name });
-  });
-
-  buildMask();
-  setStatus("進入鹿港範圍後開始計時");
-}
-
-function buildMask(){
   const outer=[
     {lat:30,lng:110},{lat:30,lng:140},
     {lat:10,lng:140},{lat:10,lng:110}
   ];
   const hole=circlePath(LUKANG_CENTER,LUKANG_RADIUS).reverse();
 
-  maskPolygon=new google.maps.Polygon({
+  mask=new google.maps.Polygon({
     map,
     paths:[outer,hole],
     fillColor:"#000",
-    fillOpacity:0.75,   // ⭐ 外面真的暗
-    strokeOpacity:0,
-    clickable:false
+    fillOpacity:0.75,
+    strokeOpacity:0
   });
+
+  setStatus("進入鹿港後開始計時");
 }
 
-function recenterToLukang(){
-  map.setCenter(LUKANG_CENTER);
-  map.setZoom(12);
-}
-
-/* ================= 定位 ================= */
+/* ===== 定位 ===== */
 function startGeolocation(){
-  navigator.geolocation.watchPosition(onLocation);
+  navigator.geolocation.watchPosition(onPos);
 }
 
 function skipGeolocation(){
-  setStatus("未啟用定位（僅瀏覽）");
+  setStatus("未啟用定位");
 }
 
-function onLocation(pos){
-  const p={lat:pos.coords.latitude,lng:pos.coords.longitude};
+function onPos(p){
+  const pos={lat:p.coords.latitude,lng:p.coords.longitude};
 
   if(!userMarker){
     userMarker=new google.maps.Marker({
-      position:p,
+      position:pos,
       map,
       icon:{
         path:google.maps.SymbolPath.CIRCLE,
@@ -196,39 +148,58 @@ function onLocation(pos){
         strokeWeight:2
       }
     });
-  } else userMarker.setPosition(p);
+  } else userMarker.setPosition(pos);
 
-  const d=haversine(p.lat,p.lng,LUKANG_CENTER.lat,LUKANG_CENTER.lng);
+  const d=google.maps.geometry.spherical.computeDistanceBetween(
+    new google.maps.LatLng(pos),
+    new google.maps.LatLng(LUKANG_CENTER)
+  );
 
   if(!entered && d<=LUKANG_RADIUS){
     entered=true;
     startTimer();
-    map.setCenter(p);
+    map.setCenter(pos);
     map.setZoom(16);
     setStatus("已進入鹿港，開始計時");
   }
-
-  if(entered){
-    locations.forEach(l=>{
-      if(!remaining.has(l.name)) return;
-      if(haversine(p.lat,p.lng,l.lat,l.lng)<=5){
-        l.marker.setMap(null);
-        remaining.delete(l.name);
-      }
-    });
-  }
 }
 
-/* ================= 計時 ================= */
+/* ===== 計時 ===== */
 function startTimer(){
   timerStart=Date.now();
   timerId=setInterval(()=>{
     const s=Math.floor((Date.now()-timerStart)/1000);
     const h=String(Math.floor(s/3600)).padStart(2,"0");
-    const m=String(Math.floor((s%3600)/60)).padStart(2,"0");
+    const m=String(Math.floor(s%3600/60)).padStart(2,"0");
     const ss=String(s%60).padStart(2,"0");
     document.getElementById("timer").textContent=`${h}:${m}:${ss}`;
   },1000);
+}
+
+/* ===== ⭐ 全螢幕地圖（Sites 專用做法）===== */
+function toggleFullscreen(){
+  const mapDiv=document.getElementById("map");
+  const btn=document.querySelector(".full-btn");
+
+  if(!isFullscreen){
+    originalHeight = mapDiv.offsetHeight;
+    const uiHeight = document.getElementById("uiBar").offsetHeight;
+    const screenHeight = window.innerHeight;
+
+    mapDiv.style.height = (screenHeight - uiHeight) + "px";
+    mapDiv.style.minHeight = mapDiv.style.height;
+    btn.textContent = "返回";
+    isFullscreen = true;
+
+    setTimeout(()=>google.maps.event.trigger(map,"resize"),300);
+  } else {
+    mapDiv.style.height = originalHeight + "px";
+    mapDiv.style.minHeight = originalHeight + "px";
+    btn.textContent = "全螢幕地圖";
+    isFullscreen = false;
+
+    setTimeout(()=>google.maps.event.trigger(map,"resize"),300);
+  }
 }
 
 window.onload=initMap;
