--- a/index.html
+++ b/index.html
@@ -6,48 +6,37 @@
 <title>鹿港行程地圖</title>
 
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
+html, body { margin:0; padding:0; }
+#app { width:100%; }
+
+#uiBar{
+  padding:10px;
+  background:#fff;
+  box-shadow:0 2px 8px rgba(0,0,0,.25);
+  font-size:14px;
+  position:sticky;
+  top:0;
+  z-index:10;
 }
 
-/* 整體 */
-#app {
-  width: 100%;
+#uiBar button{
+  padding:8px 12px;
+  border-radius:8px;
+  border:none;
+  margin-right:6px;
+  margin-bottom:6px;
 }
 
-/* UI 區 */
-#uiBar {
-  padding: 10px;
-  background: #ffffff;
-  box-shadow: 0 2px 8px rgba(0,0,0,.25);
-  font-size: 14px;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
+.start-btn{ background:#2e7d32; color:#fff; }
+.cancel-btn{ background:#e0e0e0; }
+.full-btn{ background:#1976d2; color:#fff; }
 
-#uiBar button {
-  padding: 8px 12px;
-  border-radius: 8px;
-  border: none;
-  margin-right: 6px;
-  margin-bottom: 6px;
-}
+#timerBox{ font-weight:bold; }
 
-.start-btn { background:#2e7d32; color:#fff; }
-.cancel-btn { background:#e0e0e0; }
-.full-btn { background:#1976d2; color:#fff; }
-
-#timerBox {
-  font-weight: bold;
-}
-
-/* 地圖 */
-#map {
-  width: 100%;
-  height: 420px;
-  min-height: 420px;
+#map{
+  width:100%;
+  height:420px;
+  min-height:420px;
 }
 </style>
 
@@ -103,7 +92,7 @@ function setStatus(t){
   document.getElementById("status").textContent = "狀態：" + t;
 }
 
-/* ===== 景點標點（重點修正）===== */
+/* ===== 加入景點（使用 Google 預設紅色 Marker）===== */
 function addSpots(){
   const info = new google.maps.InfoWindow();
 
@@ -111,9 +100,7 @@ function addSpots(){
     const marker = new google.maps.Marker({
       position: { lat: spot.lat, lng: spot.lng },
       map: map,
-      title: spot.name,
-      zIndex: 9999, // ⭐ 強制在最上層
-      icon: "https://maps.google.com/mapfiles/ms/icons/blue-dot.png"
+      title: spot.name   // ⭐ 不設定 icon → 就是預設紅色
     });
 
     marker.addListener("click", () => {
@@ -138,9 +125,9 @@ function circlePath(c,r,p=180){
 
 /* ===== 地圖初始化 ===== */
 function initMap(){
-  map=new google.maps.Map(document.getElementById("map"),{
-    center:LUKANG_CENTER,
-    zoom:12
+  map = new google.maps.Map(document.getElementById("map"),{
+    center: LUKANG_CENTER,
+    zoom: 12
   });
 
   const outer=[
@@ -149,16 +136,16 @@ function initMap(){
   ];
   const hole=circlePath(LUKANG_CENTER,LUKANG_RADIUS).reverse();
 
-  mask=new google.maps.Polygon({
+  mask = new google.maps.Polygon({
     map,
     paths:[outer,hole],
     fillColor:"#000",
     fillOpacity:0.75,
     strokeOpacity:0,
-    zIndex:1 // ⭐ 遮罩壓低
+    zIndex:1
   });
 
-  // ⭐ 等地圖完全載入後再畫景點
+  // ⭐ 地圖完成後再加景點（最穩）
   google.maps.event.addListenerOnce(map,"idle",addSpots);
 
   setStatus("進入鹿港後開始計時");
@@ -180,16 +167,11 @@ function onPos(p){
     userMarker=new google.maps.Marker({
       position:pos,
       map,
-      zIndex:10000,
-      icon:{
-        path:google.maps.SymbolPath.CIRCLE,
-        scale:7,
-        fillColor:"#ff0000",
-        fillOpacity:1,
-        strokeWeight:2
-      }
+      title:"你的位置"
     });
-  } else userMarker.setPosition(pos);
+  } else {
+    userMarker.setPosition(pos);
+  }
 
   const d=google.maps.geometry.spherical.computeDistanceBetween(
     new google.maps.LatLng(pos),
@@ -237,10 +219,7 @@ function toggleFullscreen(){
   }
 }
 
-window.onload=initMap;
+window.onload = initMap;
 </script>
 </body>
 </html>
-
-
-
